# lingora

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  action.yml  build.rs  cobertura.xml  rust-toolchain.toml  t.txt
.cargo/: config.toml
.github/workflows/: acceptance.yml  build_images.yml  ci.yml  commit.yml  manual_release.yml  publish.yml  release.yml
assets/css/: app.css  description.css  identifiers.css  languages.css  main.css  scrollable.css  state.css  status.css  translation.css  warnings.css  workspace.css
design/: .~lock.TuiIssueFiltering.ods#  TuiIssueFiltering.ods  tui_dependencies.mmd
docs/: README.md  default_lingora.toml  in_config_file.mmd  reference_file.md  reference_file.mmd
docs/api/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/api/lingora/: all.html  enum.AppError.html  enum.OutputMode.html  index.html  sidebar-items.js  struct.App.html  struct.Arguments.html  struct.CommandLineArgs.html  struct.ResolvedArgs.html  struct.ResolvedArgsBuilder.html
docs/api/search.index/: 029a823d4d01.js  0330d81a168b.js  035d96d4c0e0.js  04c08dba8fb9.js  086353c30326.js  0a393aa75e14.js  0cafc48137f5.js  1bf5cabe3b3d.js  23e1a56ca4f6.js  26fed0ab7ab1.js  27ac6884a6c5.js  2fe344b6b774.js  3997e81d6940.js  419e59c66fbc.js  4569ee0aa745.js  4697077edc7d.js  49d4946656f2.js  4e39e3a76b7d.js  4f7f9df5130e.js  5ad529981fcb.js  5b9a08f7de7a.js  5e5376b9c4d7.js  5f5e730a9533.js  6718d3cda94f.js  72359945016d.js  774bddb3ea6a.js  7e74645c3612.js  root.js
docs/coverage/: index.html
docs/doc/: crates.js  help.html  settings.html  src-files.js
docs/doc/lingora_cli/: all.html  enum.CliError.html  enum.OutputMode.html  index.html  (+3 more)
examples/: Lingora.toml
i18n/: it.ftl  mo-Zill-AA-fluent.ftl
i18n/en/: en-AU.ftl
i18n/it/: it-IT-variant.ftl  it-IT.ftl  it-Scrp-IT-variant.ftl  it-Scrp-IT.ftl  it-Scrp-variant.ftl  it-Scrp.ftl
src/: app.rs  lib.rs  main.rs  utils.rs
src/components/: app.rs  description.rs  identifiers.rs  languages.rs  mod.rs  state.rs  translation.rs  warning_text.rs
src/config/: arguments.rs  default_lingora.toml  interim_settings.rs  mod.rs  settings.rs
src/core/: .app.rs.pending-snap  annotated_identifier.rs  annotated_identifier_state.rs  app.rs  cli.rs  config.rs  entry_origin.rs  error.rs  fluent_file.rs  identifier.rs  identifier_origin.rs  language.rs  language_file.rs  locale.rs  mod.rs  primary_language.rs  state.rs  translation.rs
src/domain/: analysis.rs  fluent_file.rs  identifier.rs  integrity_check.rs  integrity_checks.rs  integrity_cross_check.rs  integrity_status.rs  integrity_warning.rs  locale.rs  mod.rs
src/gui/: .app.rs.pending-snap  app.rs  mod.rs  state.rs
src/output/: analysis_writer.rs  dioxis_i18n_config_writer.rs  error.rs  mod.rs  writer.rs
tests/data/: identifiers-test.toml  state-test.toml
(+498 files in other folders)
