[package]
name = "lingora"
version = "0.1.14"
description = """
Lingora is a free and open-source localization management program that analyses
fluent translation files highlighting discrepancies between reference and target
languages.
"""
authors = ["Nigel Eke <nigeleke@gmail.com>"]
edition = "2021"
repository = "https://github.com/nigeleke/lingora"
homepage = "https://nigeleke.github.io/lingora"

[lib]
name = "lingora"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dioxus = { version = "0.6", features = ["desktop"] }
fluent4rs = { git = "https://github.com/nigeleke/fluent4rs.git", features = [
    "hash",
    "walker",
] }
serde = { version = "1.0", features = ["derive"] }
sys-locale = "0.3"
thiserror = "2.0"
toml = "0.8"
unic-langid = { version = "0.9", features = ["serde"] }
walkdir = "2.5"

[dev-dependencies]
fs_extra = "1.3"
insta = { version = "1.42", features = ["filters"] }
pretty_assertions = "1.4"
tempfile = "3.16"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
